add review articles on pregnancy

--- a/book/assets/references/pregnancy.bib
+++ b/book/assets/references/pregnancy.bib
@@ -90,3 +90,46 @@
   issn      = "2090-2735,2090-2727",
   language  = "en"
 }
+
+@MISC{Soma-PillayUnknown-lq,
+  title        = "Physiological changes in pregnancy : review articles",
+  author       = "Soma-Pillay, Priya and Nelson-Piercy, Catherine and Tolppanen,
+                  Heli and Mebazaa, Alexandre",
+  booktitle    = "Cardiovascular Journal of Africa",
+  abstract     = "Physiological changes occur in pregnancy to nurture the
+                  developing foetus and prepare the mother for labour and
+                  delivery. Some of these changes influence normal biochemical
+                  values while others may mimic symptoms of medical disease. It
+                  is ...",
+  howpublished = "\url{https://journals.co.za/doi/10.5830/CVJA-2016-021}",
+  note         = "Accessed: 2025-5-9",
+  file         = "All Papers/baby/pregnancy/Soma-Pillay et al. - Physiological changes in pregnancy - review articles.pdf",
+  language     = "en"
+}
+
+@ARTICLE{Davis1996-av,
+  title     = "The discomforts of pregnancy",
+  author    = "Davis, D C",
+  journal   = "Journal of obstetric, gynecologic, and neonatal nursing : JOGNN",
+  publisher = "Elsevier BV",
+  volume    =  25,
+  number    =  1,
+  pages     = "73--81",
+  abstract  = "During pregnancy, women may experience one or more of a wide
+               variety of discomforts. Every pregnancy is different; discomforts
+               felt during one pregnancy may not appear in another. Most
+               discomforts experienced during pregnancy are thought to be the
+               result of abundant hormonal changes. As pregnancy progresses,
+               other discomforts are attributed to physical changes associated
+               with the enlarging uterus. Selected discomforts of pregnancy are
+               presented with suggestions for clinical management. Nurses can do
+               something to decrease discomforts associated with pregnancy.",
+  month     =  "1~" # jan,
+  year      =  1996,
+  url       = "http://dx.doi.org/10.1111/j.1552-6909.1996.tb02516.x",
+  file      = "All Papers/baby/pregnancy/Davis 1996 - The discomforts of pregnancy.pdf",
+  doi       = "10.1111/j.1552-6909.1996.tb02516.x",
+  pmid      =  8627406,
+  issn      = "1552-6909,0884-2175",
+  language  = "en"
+}
