--- a/book/assets/references/pregnancy.bib
+++ b/book/assets/references/pregnancy.bib
@@ -91,20 +91,39 @@
   language  = "en"
 }
 
-@MISC{Soma-PillayUnknown-lq,
-  title        = "Physiological changes in pregnancy : review articles",
-  author       = "Soma-Pillay, Priya and Nelson-Piercy, Catherine and Tolppanen,
-                  Heli and Mebazaa, Alexandre",
-  booktitle    = "Cardiovascular Journal of Africa",
-  abstract     = "Physiological changes occur in pregnancy to nurture the
-                  developing foetus and prepare the mother for labour and
-                  delivery. Some of these changes influence normal biochemical
-                  values while others may mimic symptoms of medical disease. It
-                  is ...",
-  howpublished = "\url{https://journals.co.za/doi/10.5830/CVJA-2016-021}",
-  note         = "Accessed: 2025-5-9",
-  file         = "All Papers/baby/pregnancy/Soma-Pillay et al. - Physiological changes in pregnancy - review articles.pdf",
-  language     = "en"
+@ARTICLE{Carlin2008-bn,
+  title     = "Physiological changes of pregnancy and monitoring",
+  author    = "Carlin, Andrew and Alfirevic, Zarko",
+  journal   = "Best practice \& research. Clinical obstetrics \& gynaecology",
+  publisher = "Elsevier BV",
+  volume    =  22,
+  number    =  5,
+  pages     = "801--823",
+  abstract  = "Advances in medical care have led to increasing numbers of
+               complex, high-risk obstetric patients. Specialist training and a
+               sound knowledge of normal maternal physiology are essential to
+               optimize outcomes. One of the earliest observed changes is
+               peripheral vasodilatation; this causes a fall in systemic
+               vascular resistance and triggers physiological changes in the
+               cardiovascular and renal systems, with 40-50\% increases in
+               cardiac output and glomerular filtration rates. Safety concerns
+               over Swan Ganz catheters have driven the increasing interest in
+               alternative techniques, such as echocardiography, thoracic
+               bioimpedance and pulse contour analysis, although their exact
+               roles in future obstetric high-dependency care have yet to be
+               established. Analysis of arterial blood gases is fundamental to
+               the management of sick patients, and correct interpretation can
+               be aided by a systematic approach. Observation charts are almost
+               ubiquitous in all aspects of medicine, but little evidence exists
+               to support their use in the high-dependency setting.",
+  month     =  "1~" # oct,
+  year      =  2008,
+  url       = "http://dx.doi.org/10.1016/j.bpobgyn.2008.06.005",
+  file      = "All Papers/baby/pregnancy/Carlin and Alfirevic 2008 - Physiological changes of pregnancy and monitoring.pdf",
+  doi       = "10.1016/j.bpobgyn.2008.06.005",
+  pmid      =  18760680,
+  issn      = "1521-6934,1532-1932",
+  language  = "en"
 }
 
 @ARTICLE{Davis1996-av,
