more about infant sleeping

--- a/book/assets/references/sleeping.bib
+++ b/book/assets/references/sleeping.bib
@@ -62,3 +62,134 @@
   issn      = "0090-4481,1938-2359",
   language  = "en"
 }
+
+@ARTICLE{Sadeh2010-uu,
+  title     = "Parenting and infant sleep",
+  author    = "Sadeh, Avi and Tikotzky, Liat and Scher, Anat",
+  journal   = "Sleep medicine reviews",
+  publisher = "Elsevier BV",
+  volume    =  14,
+  number    =  2,
+  pages     = "89--96",
+  abstract  = "Infant sleep undergoes dramatic evolution during the first year
+               of life. This process is driven by underlying biological forces
+               but is highly dependent on environmental cues including parental
+               influences. In this review the links between infant sleep and
+               parental behaviors, cognitions, emotions and relationships as
+               well as psychopathology are examined within the context of a
+               transactional model. Parental behaviors, particularly those
+               related to bedtime interactions and soothing routines, are
+               closely related to infant sleep. Increased parental involvement
+               is associated with more fragmented sleep. Intervention based on
+               modifying parental behaviors and cognitions have direct effect on
+               infant sleep. It appears that parental personality,
+               psychopathology and related cognitions and emotions contribute to
+               parental sleep-related behaviors and ultimately influence infant
+               sleep. However, the links are bidirectional and dynamic so that
+               poor infant sleep may influence parental behaviors and poor
+               infant sleep appears to be a family stressor and a risk factor
+               for maternal depression.",
+  month     =  "1~" # apr,
+  year      =  2010,
+  url       = "http://dx.doi.org/10.1016/j.smrv.2009.05.003",
+  file      = "All Papers/baby/sleeping/Sadeh et al. 2010 - Parenting and infant sleep.pdf",
+  doi       = "10.1016/j.smrv.2009.05.003",
+  pmid      =  19631566,
+  issn      = "1087-0792,1532-2955",
+  language  = "en"
+}
+
+
+@ARTICLE{Scher2008-va,
+  title     = "Ontogeny of {EEG}-sleep from neonatal through infancy periods",
+  author    = "Scher, Mark S",
+  journal   = "Sleep medicine",
+  publisher = "Elsevier BV",
+  volume    =  9,
+  number    =  6,
+  pages     = "615--636",
+  abstract  = "Serial neonatal and infant electroencephalographic
+               (EEG)-polysomnographic studies document the ontogeny of cerebral
+               and noncerebral physiologic behaviors based on visual inspection
+               or computer analyses. EEG patterns and their relationship to
+               other physiologic signals serve as templates for normal brain
+               organization and maturation, subserving multiple interconnected
+               neuronal networks. Interpretation of serial EEG-sleep patterns
+               also helps track the continuity of brain functions from
+               intrauterine to extrauterine time periods. Recognition of the
+               ontogeny of behavioral and electrographic patterns provides
+               insight into the developmental neurophysiological expression of
+               neural plasticity. Sleep ontogenesis from neonatal and infancy
+               periods documents expected patterns of postnatal brain
+               maturation, which allows for alterations from genetically
+               programmed neuronal processes under stressful and/or pathological
+               conditions. Automated analyses of cerebral and noncerebral
+               signals provide time- and frequency-dependent computational
+               phenotypes of brain organization and maturation in healthy or
+               diseased states. Research pertaining to the developmental origins
+               of health and disease can use these computational phenotypes to
+               design longitudinal studies for the assessment of
+               gene-environment interactions. Computational strategies may
+               ultimately improve our diagnostic skills to identify
+               special-needs children and to track the neurorehabilitative care
+               of the high-risk fetus, neonate, and infant.",
+  month     =  "1~" # aug,
+  year      =  2008,
+  url       = "http://dx.doi.org/10.1016/j.sleep.2007.08.014",
+  file      = "All Papers/baby/sleeping/Scher 2008 - Ontogeny of EEG-sleep from neonatal through infancy periods.pdf",
+  doi       = "10.1016/j.sleep.2007.08.014",
+  pmid      =  18024172,
+  issn      = "1389-9457,1878-5506",
+  language  = "en"
+}
+
+@ARTICLE{Hauck2008-fv,
+  title     = "Infant sleeping arrangements and practices during the first year
+               of life",
+  author    = "Hauck, Fern R and Signore, Caroline and Fein, Sara B and Raju,
+               Tonse N K",
+  journal   = "Pediatrics",
+  publisher = "American Academy of Pediatrics (AAP)",
+  volume    = "122 Suppl 2",
+  number    = "Supplement\_2",
+  pages     = "S113--20",
+  abstract  = "OBJECTIVES: Our goal was to examine the sleeping arrangements for
+               infants from birth to 1 year of age and to assess the association
+               between such arrangements and maternal characteristics. METHODS:
+               Responses to the 3-, 6-, 9-, and 12-month questionnaires from the
+               Infant Feeding Practices Study II were analyzed to assess sleep
+               arrangements, including bed sharing, the latter defined as mother
+               ever (in a given time frame) slept with the infant on the same
+               sleeping surface for nighttime sleep. Women were also asked about
+               the reasons for bed sharing or not bed sharing. RESULTS:
+               Approximately 2300 women responded at 3 months, and 1800 at 12
+               months. At 3 months, 85\% of the infants slept in the same room
+               as their mother, and at 12 months that rate was 29\%. At 3
+               months, 26\% of the mothers did not use the recommended supine
+               position for their infant's nighttime sleep. The rate of
+               noncompliance increased to 29\% by 6 months and 36\% by 12
+               months. The bed-sharing rates were 42\% at 2 weeks, 34\% at 3
+               months, and 27\% at 12 months. Approximately two thirds of those
+               who bed shared with their infant also shared the bed with their
+               husband or partner, and 5\% to 15\% shared it with other
+               children. The major reasons for bed sharing were to calm a fussy
+               infant, facilitate breastfeeding, and help the infant and/or
+               mother sleep better. The major reasons for not lying down with
+               the infant were safety concerns. Non-Hispanic black mothers were
+               more likely than non-Hispanic white mothers to use nonsupine
+               infant sleep positions and to bed share. CONCLUSIONS: More than
+               one third of the women in this cohort were noncompliant with
+               safe-sleeping guidelines when their infant was 3 months old.
+               Health care providers need to advise parents of current
+               recommendations and discuss the risks and benefits of their
+               choices for infant sleeping practices.",
+  month     =  "1~" # oct,
+  year      =  2008,
+  url       = "https://dx.doi.org/10.1542/peds.2008-1315o",
+  file      = "All Papers/baby/sleeping/Hauck et al. 2008 - Infant sleeping arrangements and practices during the first year of life.pdf",
+  keywords  = "sleep; sudden infant death; co-sleeping",
+  doi       = "10.1542/peds.2008-1315o",
+  pmid      =  18829826,
+  issn      = "0031-4005,1098-4275",
+  language  = "en"
+}
