--- a/book/assets/references/sleeping.bib
+++ b/book/assets/references/sleeping.bib
@@ -193,3 +193,26 @@
   issn      = "0031-4005,1098-4275",
   language  = "en"
 }
+
+@ARTICLE{Parmelee1964-oc,
+  title     = "Infant sleep patterns: From birth to 16 weeks of age",
+  author    = "Parmelee, Jr, A H and Wenner, W H and Schulz, H R",
+  journal   = "The journal of pediatrics",
+  publisher = "Mosby",
+  volume    =  65,
+  number    =  4,
+  pages     = "576--582",
+  abstract  = "Records of sleep and wakefulness were kept on forty-six infants
+               during their first 16 weeks of life. There was a relatively small
+               decrease in the tota…",
+  month     =  "1~" # oct,
+  year      =  1964,
+  url       = "http://dx.doi.org/10.1016/S0022-3476(64)80291-2",
+  file      = "All Papers/baby/sleeping/Parmelee et al. 1964 - Infant sleep patterns - From birth to 16 weeks of age.pdf",
+  keywords  = "CIRCADIAN RHYTHM; CLINICAL RESEARCH; INFANT; INFANT CARE; INFANT,
+               NEWBORN; PERIODICITY; SLEEP",
+  doi       = "10.1016/s0022-3476(64)80291-2",
+  pmid      =  14216645,
+  issn      = "0022-3476,1097-6833",
+  language  = "en"
+}
