add consumption of mother's milk

--- a/book/assets/references/feeding.bib
+++ b/book/assets/references/feeding.bib
@@ -78,3 +78,48 @@
 	year = {2021},
 	litmapsId = {172657295}
 }
+
+@ARTICLE{da-Costa2010-bk,
+  title     = "How much human milk do infants consume? Data from 12 countries
+               using a standardized stable isotope methodology",
+  author    = "da Costa, Teresa H M and Haisma, Hinke and Wells, Jonathan C K
+               and Mander, Adrian P and Whitehead, Roger G and Bluck, Leslie J C",
+  journal   = "The journal of nutrition",
+  publisher = "Elsevier BV",
+  volume    =  140,
+  number    =  12,
+  pages     = "2227--2232",
+  abstract  = "The WHO has developed new growth curves based on breast-fed
+               infants. Recommendations for energy intake have been adopted
+               based on measurements of total energy expenditure. Data on human
+               milk (HM) intake are needed to estimate the energy intake from
+               this food source. However, objective HM data from around the
+               world have not been available, because these measurements are
+               difficult to obtain. Stable isotope methods have been developed
+               to provide objective measurements over a 14-d period. A pooled
+               analysis of 1115 data points of HM intake, obtained using the
+               dose to the mother deuterium oxide turnover method, was
+               undertaken in infants aged 0-24 mo from 12 countries across 5
+               continents. A hierarchical model was needed to estimate mean HM
+               intake and its variance within and between countries given the
+               complexity of the data. The overall mean HM intake was 0.78 (95\%
+               CI = 0.72, 0.84) kg/d, and the age-specific estimates indicated
+               that intake increased over the first 3-4 mo and remained above
+               0.80 kg/d until 6-7 mo. The variability of intake increased in
+               late infancy. Boys consumed 0.05 kg/d more than girls (P < 0.01).
+               HM intake was strongly, inversely associated with non-HM water
+               intake [r = -0.448 (95\% CI -0.511 to -0.385); P < 0.0001]. These
+               objective isotope values of HM intake improve our understanding
+               of the magnitude and variability of HM intake within and across
+               populations and help to estimate nutrient intakes in breast-fed
+               infants.",
+  month     =  "1~" # dec,
+  year      =  2010,
+  url       = "http://dx.doi.org/10.3945/jn.110.123489",
+  file      = "All Papers/baby/feeding/da Costa et al. 2010 - How much human milk do infants consume - Data from 12 countries using a standardized stable isotope methodology.pdf",
+  doi       = "10.3945/jn.110.123489",
+  pmc       = "PMC3592484",
+  pmid      =  20980653,
+  issn      = "0022-3166,1541-6100",
+  language  = "en"
+}
