--- a/book/assets/references/feeding.bib
+++ b/book/assets/references/feeding.bib
@@ -123,3 +123,67 @@
   issn      = "0022-3166,1541-6100",
   language  = "en"
 }
+
+
+@BOOK{Butte2002-cc,
+  title     = "Nutrient adequacy of exclusive breastfeeding for the term infant
+               during the first six months of life",
+  author    = "Butte, N F and Garza, C and Lopez-Alarcon, M G",
+  publisher = "World Health Organization",
+  address   = "Genève, Switzerland",
+  abstract  = "This review, which was prepared as part of the background
+               documentation for a WHO expert consultation, evaluates the
+               nutrient adequacy of exclusive breastfeeding for term infants
+               during the first 6 months of life. Nutrient intakes provided by
+               human milk are compared with infant nutrient requirements.",
+  month     =  "26~" # dec,
+  year      =  2002,
+  url       = "https://www.who.int/publications/i/item/9241562110",
+  file      = "All Papers/baby/feeding/Butte et al. 2002 - Nutrient adequacy of exclusive breastfeeding for the term infant during the first six months of life.pdf",
+  isbn      =  9789241562119,
+  language  = "en"
+}
+
+@ARTICLE{Kimball2008-bx,
+  title     = "Vitamin {D}: a growing perspective",
+  author    = "Kimball, Samantha and Fuleihan, Ghada El-Hajj and Vieth, Reinhold",
+  journal   = "Critical reviews in clinical laboratory sciences",
+  publisher = "Informa UK Limited",
+  volume    =  45,
+  number    =  4,
+  pages     = "339--414",
+  abstract  = "Vitamin D deficiency has been widely reported in all age groups
+               in recent years. Rickets has never been eradicated in developed
+               countries, and it most commonly affects children from recent
+               immigrant groups. There is much evidence that current vitamin D
+               guidelines for the neonatal period, 5-10 microg (200-400 IU)/day,
+               prevent rickets at the typical calcium intakes in developed
+               countries. The annual incidence of vitamin D-deficiency rickets
+               in developed countries ranges between 2.9 and 7.5 cases per
+               100,000 children. The prevalence of vitamin D deficiency in
+               mothers and their neonates is remarkable, and the results of one
+               study suggest that third-trimester 25-hydroxyvitamin D (25(OH)D)
+               is associated with fetal bone mineral accrual that may affect
+               prepubertal bone mass accumulation. Beyond infancy, the evidence
+               indicates that 5 microg (200 IU)/day of vitamin D has little
+               effect on vitamin D status as measured by the serum 25(OH)D
+               concentration. Two randomized clinical trials show that higher
+               vitamin D intake improves one-year gain in bone density in
+               adolescent girls. The functions of vitamin D extend beyond bone
+               to include immune system regulation and anti-proliferative
+               effects on cells. Early life vitamin D inadequacy is implicated
+               in the risk of bone disease, autoimmune disease, and certain
+               cancers later in life; however, long-term interventional studies
+               do not exist to validate the widespread implementation of greater
+               vitamin D consumption. Here we review the available data
+               concerning vitamin D status and health effects of vitamin D in
+               pregnancy through to and including adolescence.",
+  month     =  "10~" # oct,
+  year      =  2008,
+  url       = "http://dx.doi.org/10.1080/10408360802165295",
+  file      = "All Papers/baby/feeding/Kimball et al. 2008 - Vitamin D - a growing perspective.pdf",
+  doi       = "10.1080/10408360802165295",
+  pmid      =  18568854,
+  issn      = "1040-8363,1549-781X",
+  language  = "en"
+}
